--- a/directives/photo.html
+++ b/directives/photo.html
@@ -1,5 +1,7 @@
 <div class="">
 
+  <img src={{test}} alt="">
+
   <button type="button" ng-click=ourPhoto('action') name="button">Action</button>
   <button type="button" ng-click=ourPhoto('drama') name="button">Drama</button>
   <button type="button" ng-click=ourPhoto('comedy') name="button">Comedy</button>
