--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body ng-controller="mainCtrl">
-
+  <body ng-controller="mainCtrl" >
+    <div class="bgImage">
+      <img class="realbgImage" src="http://vignette2.wikia.nocookie.net/youtubescratch/images/9/9b/Sega_Theatres_Movie_Theatre_Screen.PNG/revision/latest?cb=20141110235139" alt="">
     <header>
             <nav>
                 <ul>
@@ -27,7 +28,7 @@
 
 
 
-
+  </div>
 
 <ui-view></ui-view>
 
