more responsive styling

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             </nav>
         </header>
 
+    <lesson-hider send-tweet="tweet"></lesson-hider>
+
 
 
   </div>
@@ -37,6 +39,7 @@
 <script src="js/app.js"></script>
 <script src="js/mainCtrl.js"></script>
 <script src="js/myService.js"></script>
+<script src="js/myDirect.js"></script>
 
   </body>
 </html>
