--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body ng-controller="mainCtrl" >
     <div class="bgImage">
-      <img class="realbgImage" src="http://vignette2.wikia.nocookie.net/youtubescratch/images/9/9b/Sega_Theatres_Movie_Theatre_Screen.PNG/revision/latest?cb=20141110235139" alt="">
+      <img class="realbgImage" src="https://vignette2.wikia.nocookie.net/youtubescratch/images/9/9b/Sega_Theatres_Movie_Theatre_Screen.PNG/revision/latest?cb=20141110235139" alt="">
     <header>
             <nav>
                 <ul>
