--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <ui-view></ui-view>
 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.3/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
 <script src="js/app.js"></script>
 <script src="js/mainCtrl.js"></script>
