--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li class="bracket"><a type="submit" name="button" ui-sref='drama' ng-click=newImage('drama')>Drama</a></li>
                     <li class="bracket"><a type="button" name="button" ui-sref='romance' ng-click=newImage('romance')>Romance</a></li>
                     <li class="bracket"><a type="button" name="button" ui-sref='thriller' ng-click=newImage('thriller')>Thriller</a></li>
-                    <li class="bracket"><a type="button" name="button" ui-sref='fantasy' ng-click=newImage('fantasy')>Sci-Fi/Fantasy</a></li>
+                    <li class="bracket" style="border-right-style: solid; border-right-color: white"><a type="button" name="button" ui-sref='fantasy' ng-click=newImage('fantasy')>Sci-Fi/Fantasy</a></li>
                     </ul>
                 </div>
               </div>
